# noise-c

./: .gitignore  CMakeLists.txt  Makefile.am
include/noise/protocol/: constants.h  util.h
src/crypto/newhope/: error_correction.c
src/protocol/: Makefile.am  names.c  util.c
test-project/: CMakeLists.txt
